# dMelHuBERT

./: .gitignore  README.md  compute_bitrate.py  dmelhubert_iter1_train_config.json  evaluate_abx.py  extract_dmels.py  extract_features.py  extract_features_labels.py  extract_mfcc_labels.py  extract_mfccs.py  pyproject.toml  test_dataset.py  test_initialize_ctc_lora.py  test_model_fwd.py  test_tokenizer.py  tokenizer.json  train_dmelhubert_ctc.py  train_dmelhubert_iter1.py  train_dmelhubert_iter2.py  train_dmelhubert_iter3.py  train_dmelhubert_warm_start.py  train_dmelhubert_warm_start_local.py  train_iter1.py  train_k_means.py  train_tokenizer.py
dmelhubert/: dataset.py  datasets.py  datasets_ctc.py  dmel.py  dmelhubert.py  dmelhubert_ctc.py  mfcc.py  model.py  scheduler.py  trainer.py  trainer_ctc.py  transformer.py
