[project]
name = "dmelhubert"
version = "0.1.0"
description = ""
authors = [
    {name = "nicolvisser",email = "nicolvisser@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "xformers (>=0.0.29.post3,<0.0.30)",
    "lightning (>=2.5.1,<3.0.0)",
    "wandb (>=0.19.9,<0.20.0)",
    "torchaudio (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
matplotlib = "^3.10.1"

